# pacman-solutions

./: .gitignore  .gitlab-ci.yml  README.md  diary.md  docker-compose.yml
.github/: dependabot.yml
solving-pacman-backend/: .pre-commit-config.yaml  Dockerfile  firebase.json  pyproject.toml  requirements.txt  wsgi.py
solving-pacman-backend/solving_pacman_backend/: exceptions.py  main.py  mocks.py  wsgi.py
solving-pacman-backend/solving_pacman_backend/models/: agent.py  data_types.py  entity.py  environment.py  game_state.py  game_state_store.py  ghost_agent.py  graph.py  levels.json  movement_types.py  node.py  pacman_agent.py  path.py  pickups.py  placeholder_agent.py  position.py
solving-pacman-backend/solving_pacman_backend/scripts/: analytics.py
solving-pacman-backend/solving_pacman_backend/server/: server.py
solving-pacman-backend/solving_pacman_backend/services/: authentication.py  game_manager.py  level_handler.py  map_renderer.py
solving-pacman-backend/solving_pacman_backend/utils/: agent_utils.py  entity_utils.py  game_utils.py  level_utils.py
solving-pacman-backend/tests/: conftest.py  mocks_test.py
solving-pacman-backend/tests/mocks/: mock_agent_test.py  mock_graph_test.py
solving-pacman-backend/tests/models/: agent_test.py  game_state_store_test.py  game_state_test.py  ghost_agent_test.py  graph_test.py  node_test.py  pacman_agent_test.py  path_test.py  pickups_test.py  position_test.py
solving-pacman-backend/tests/server/: app_test.py
solving-pacman-backend/tests/services/: level_handler_test.py
solving-pacman-backend/tests/utils/: agent_utils_test.py  game_utils_test.py  level_utils_test.py
(+67 files in other folders)
