[tool.poetry]
name = "solving-pacman-backend"
version = "0.1.0"
description = ""
authors = ["David <davidkidd.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flake8 = "^6.1.0"
black = "^23.9.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
