[tool.poetry]
name = "solving-pacman-backend"
version = "0.1.0"
description = "Application to solve Pacman puzzles"
authors = ["David Kidd <zhac086@live.rhul.ac.uk>"]
readme = "../README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.0"
flake8 = "^6.1.0"
black = "^24.3.0"
gunicorn = "^21.2.0"
pytest = "^7.4.2"
pre-commit = "^3.4.0"
coverage = "^7.3.2"
pydocstyle = "^6.3.0"
pytest-pydocstyle = "^2.3.2"
pydocstyle-gitlab-code-quality = "^0.0.1"
flask-cors = "^4.0.0"
interrogate = "^1.5.0"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.interrogate]
ignore-init-module = true
ignore-magic = true
